--- a/src/features/TodoList/TodoList.module.css
+++ b/src/features/TodoList/TodoList.module.css
@@ -1,6 +1,16 @@
-.todoList{
-    width: 100%;
-    border: 1px solid #ffffff;
-    border-radius: 4px;
-    padding: 16px;
+.todoList {
+  width: 100%;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 12px 0;
+  flex-grow: 1;
 }
